Update run-tests.yml to install html-react-parser

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -36,5 +36,8 @@ jobs:
       - name: Install Satori
         run: npm install satori
 
+      - name: Install html-react-parser
+        run: npm install html-react-parser
+
       - name: Execute tests
         run: vendor/bin/pest
