--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
         "symfony/process": "^6.2"
     },
     "require-dev": {
-        "laravel/pint": "^1.2",
-        "pestphp/pest": "^1.20"
+        "pestphp/pest": "^2.15",
+        "laravel/pint": "^1.0"
     },
     "autoload": {
         "psr-4": {
