--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php": "^8.1",
         "spatie/temporary-directory": "^2.1",
-        "symfony/process": "^6.2"
+        "symfony/process": "^6.2|^7.0"
     },
     "require-dev": {
         "pestphp/pest": "^2.15",
